fixed uncovered bug where each character had two images in scene.js

--- a/src/pages/ScenePage/style.scss
+++ b/src/pages/ScenePage/style.scss
@@ -12,16 +12,22 @@
       position: absolute !important;
       left: 0;
       bottom: 100px;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease;
       &.nonSpeaker {
         filter: brightness(50%);
+        transition: filter 0.5s ;
       }
     }
     &--right {
       position: absolute !important;
       right: 0;
       bottom: 100px;
+      -webkit-transition: all 0.5s ease;
+      transition: all 0.5s ease;
       &.nonSpeaker {
         filter: brightness(50%);
+        transition: filter 0.5s ;
       }
     }
   }
